; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_teap.c_eap_teap_get_session_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_teap.c_eap_teap_get_session_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_teap_data = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.eap_sm*, i8*, i64*)* @eap_teap_get_session_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @eap_teap_get_session_id(%struct.eap_sm* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.eap_sm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.eap_teap_data*, align 8
  %9 = alloca i32*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.eap_teap_data*
  store %struct.eap_teap_data* %11, %struct.eap_teap_data** %8, align 8
  %12 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %13 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %3
  %17 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %18 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16, %3
  store i32* null, i32** %4, align 8
  br label %39

22:                                               ; preds = %16
  %23 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %24 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %27 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = call i32* @os_memdup(i32 %25, i64 %28)
  store i32* %29, i32** %9, align 8
  %30 = load i32*, i32** %9, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %33, label %32

32:                                               ; preds = %22
  store i32* null, i32** %4, align 8
  br label %39

33:                                               ; preds = %22
  %34 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %35 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load i64*, i64** %7, align 8
  store i64 %36, i64* %37, align 8
  %38 = load i32*, i32** %9, align 8
  store i32* %38, i32** %4, align 8
  br label %39

39:                                               ; preds = %33, %32, %21
  %40 = load i32*, i32** %4, align 8
  ret i32* %40
}

declare dso_local i32* @os_memdup(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
